@@ -63,7 +63,7 @@ extern void epiphanybf_h_accum_set_handler (SIM_CPU *, DI);
 
 /* Custom reg getters/setters */
 void epiphanybf_set_config(SIM_CPU *current_cpu, USI val);
-void epiphanybf_set_status(SIM_CPU *current_cpu, USI val);
+void epiphanybf_set_status(SIM_CPU *current_cpu, USI val, BI fstatus);
 void epiphanybf_set_imask(SIM_CPU *current_cpu, USI val);
 void epiphanybf_set_ilatst(SIM_CPU *current_cpu, USI val);
 void epiphanybf_set_ilatcl(SIM_CPU *current_cpu, USI val);
